# cabinet-mcp

./: .gitignore  .mcp.json  ATTRIBUTIONS.md  CLAUDE.md  EVALUATION.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/add-preset/: SKILL.md
.claude/skills/add-scenario/: SKILL.md
.claude/skills/cabinet-review/: SKILL.md
.claude/skills/drive-mcp-handlers/: SKILL.md
.claude/skills/run-evals/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  code-review-2026-07-17.md  code-review-2026-07.md  evals.md  furniture_refs.csv  hardware.md  joinery.md  local-setup.md  mcp.md  presets.md  proportions.md  pulls.md
evals/: __main__.py  harness.py  scenarios.py
src/cadquery_furniture/: __init__.py  auto_fix.py  cabinet.py  cutlist.py  describe.py  door.py  drawer.py  evaluation.py  furniture_refs.py  hardware.py  joinery.py  presets.py  project.py  proportions.py  pulls.py  server.py  visualize.py
src/cadquery_furniture/data/: pull_presets.json  pulls_catalog.json
src/cadquery_furniture/examples/: __init__.py
tests/: test_cutlist.py  test_cutlist_optimizer.py  test_doors.py  test_drawer_assembly.py  test_drawer_orientation.py  test_eval_harness.py  test_evaluation.py  test_furniture_refs.py  test_hardware.py  test_joinery.py  test_new_presets.py  test_per_drawer_options.py  test_project.py  test_project_fork_update.py  test_pull_bom.py  test_pull_config.py  test_pull_evaluation.py  test_pulls.py  test_review_2026_07_17.py  test_server.py  test_server_pulls.py  test_viewer_pairing.py  test_visualize.py  test_visualize_finish.py
