[project]
name = "cadquery-furniture"
version = "0.1.0"
description = "Parametric furniture design, evaluation, and cutlist optimization with CadQuery"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0,!=1.27.0",
    "numpy",
]

[project.optional-dependencies]
# 3D geometry, interference checks, GLB export, and the self-contained HTML viewer
cad = ["cadquery>=2.4"]
# Sheet-goods nesting optimizer (opcut primary; rectpack fallback) + PDF export
# opcut 0.1.3 is the last pure-Python release; 0.2+ are Linux-only compiled wheels.
cutlist = ["opcut==0.1.3", "rectpack", "reportlab"]
# Everything: cad + cutlist.  Recommended for normal use.
full = ["cadquery-furniture[cad,cutlist]"]
# Lite: explicit alias for a base-only install (no extras needed — documented for clarity)
lite = []
# Developer tools
dev = ["pytest>=7.0", "pytest-cov"]

[dependency-groups]
# uv-native mirrors of the extras above — lets "uv run" resolve groups without --extra flags
cad     = ["cadquery>=2.4"]
cutlist = ["opcut==0.1.3", "rectpack", "reportlab"]
full    = [{include-group = "cad"}, {include-group = "cutlist"}]
dev     = ["pytest>=7.0", "pytest-cov"]

[tool.uv]
# "uv run cabinet-mcp" and "uv run pytest" both work out of the box.
# For a lightweight install without CadQuery: uv run --no-group full cabinet-mcp
default-groups = ["full", "dev"]
# opcut 0.1.3 pins jsonschema==3.0.1, but we only use opcut.common/csp which
# never import jsonschema. Override to keep mcp's required jsonschema 4.x.
override-dependencies = [
    # opcut 0.1.3 pins jsonschema==3.0.1; we only use opcut.common/csp which
    # never import jsonschema, so keep mcp's required jsonschema 4.x.
    "jsonschema>=4.0",
    # opcut 0.1.3 → doit==0.31.1 → pyinotify which fails to build on macOS.
    # We only import opcut.common/csp (not doit at all), so any doit version works.
    "doit>=0.36",
]

[project.scripts]
cabinet-mcp = "cadquery_furniture.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cadquery_furniture = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
